--- a/index.html
+++ b/index.html
@@ -65,7 +65,59 @@
     <!------------------------------>
     <!-- Stuff for body goes here -->
 
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+          <h1 class="display-5 fw-bold">Welcome to Easin!</h1>
+          <p class="col-md-8 fs-4">Are you feeling exhausted?</p>
+  
+          <button class="btn btn-outline-success btn-lg" type="button" onclick="parent.location='login.html'">Sign in / Sign up</button>
+          
+          <!-- Add an onclick attribute to define click event handler -->
+          <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
+      </div>
+  </div>
 
+  
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/aaa.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">What is your stress?</h5>
+              <p class="card-text">Different stress needs different solutions.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">2024.02.06</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/bbb.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">How to manage?</h5>
+              <p class="card-text">Time to find the solution.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">2024.02.06</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="./images/ddd.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Analyze!</h5>
+              <p class="card-text">Make a data analysis of your changes.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">2024.02.06</small>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
