added a personalization message to main

--- a/main.html
+++ b/main.html
@@ -43,12 +43,13 @@
     <!------------------------------>
     <!-- Stuff for body goes here -->
 
-  <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Welcome to Easin!</h1>
-          <p class="col-md-8 fs-4">Are you feeling exhausted?</p>
-  
-          <button class="btn btn-outline-success btn-lg" type="button" onclick="parent.location='login.html'">Sign in / Sign up</button>
+    <div class="container-fluid bg-light text-dark p-5">
+      <div class="container bg-light p-5">
+          <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
+          <hr>
+          <p>How can YOU help yourself today?</p>
+      </div>
+</div>
           
           <!-- Add an onclick attribute to define click event handler -->
           <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
@@ -108,6 +109,7 @@
     <!-- <script src="./scripts/script.js"></script> -->
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/main.js"></script>
 
 </body>
 
