--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-warning">
   <div class="container-fluid">
-      <a class="navbar-brand" href="#">HoCa Hikes</a>
+      <a class="navbar-brand" href="#">EASIN</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
           aria-label="Toggle navigation">
