--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">EASIN</a>
+        <a class="navbar-brand" href="#">
+          <img src="images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          EASIN
+        </a>
+      </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
