--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
+        <img src="../images/956860-200.png" height="36">
+        Easin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
           aria-label="Toggle navigation">
