added firebase api and edited header a little bit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Stuff for body goes here -->
 
   <div class="container text-center py-4">
-    <h1>Welcome to HoCa's Hiking App</h1>
+    <h1>Welcome to EASIN. Let's get to easin'.</h1>
     <a href="login.html" class="btn btn-warning" role="button">Log in</a>
   </div>
 
