--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div class="container text-center py-4">
     <h1>Welcome to EASIN. Let's get to easin'.</h1>
-    <a href="login.html" class="btn btn-warning" role="button">Log in</a>
+    <a href="login.html" class="btn btn-success" role="button">Log in</a>
   </div>
 
   <!-- Add an onclick attribute to define click event handler -->
