--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Boostrap Library JS CDN  go here -->
 
@@ -25,6 +26,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     
     <!-- Other libraries go here -->
+    <link rel="stylesheet" href="styles/style.css">
 
     <!-- Link to styles of your own -->
     <link rel="stylesheet" href="./styles/style.css">
@@ -73,14 +75,16 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="./images/bbb.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">How to manage?</h5>
-                <p class="card-text">Time to find the solution.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">2024.02.06</small>
-              </div>
+              <a>
+                <img src="./images/bbb.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Task Calendar</h5>
+                  <p class="card-text">Let's Organize</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last visited <span id="lastDate"></span></small>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col">
