--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -12,9 +12,8 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">About Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
-          </li>
+        </ul>
+        <button onclick="window.location.href='index.html'" class="btn btn-primary btn-lg" type="button">Log Out</button>
       </div>
     </div>
 </nav>
