--- a/activities-main.html
+++ b/activities-main.html
@@ -64,7 +64,7 @@
                     <img src="./images/ddd.jpg" class="card-img-top" alt="...">
 
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Activities</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -77,7 +77,7 @@
                         <img src="./images/ddd.jpg" class="card-img-top" alt="...">
 
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Stress Checker</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
