--- a/main.html
+++ b/main.html
@@ -63,6 +63,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100">
+              <a href="activities-main.html">
               <img src="./images/aaa.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">What is your stress?</h5>
@@ -71,6 +72,7 @@
               <div class="card-footer">
                 <small class="text-muted">2024.02.06</small>
               </div>
+            </a>
             </div>
           </div>
           <div class="col">
