added stress checker page

--- a/activities-main.html
+++ b/activities-main.html
@@ -45,9 +45,7 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
-            <hr>
-            <p>How can YOU help yourself today?</p>
+            <h1 class="display-4">Okay <span id="name-goes-here"></span>, let's get to WORK!</h1>
         </div>
     </div>
 
