--- a/stress-checker.html
+++ b/stress-checker.html
@@ -47,9 +47,7 @@
 
   <div class="container-fluid bg-light text-dark p-5">
     <div class="container bg-light p-5">
-      <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
-      <hr>
-      <p>How can YOU help yourself today?</p>
+      <h1 class="display-4">Stress Checker</h1>
     </div>
   </div>
 
@@ -60,51 +58,20 @@
 
 
   <div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <a class="cardLink" href="activities-main.html">
-            <img src="./images/aaa.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">What is your stress?</h5>
-              <p class="card-text">Different stress needs different solutions.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">2024.02.06</small>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a class="cardLink">
-            <img src="./images/bbb.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Task Calendar</h5>
-              <p class="card-text">Let's Organize</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last visited <span id="lastDate"></span></small>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a class="cardLink">
-            <img src="./images/ddd.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Analyze!</h5>
-              <p class="card-text">Make a data analysis of your changes.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">2024.02.06</small>
-            </div>
-          </a>
-        </div>
-        </a>
-      </div>
+    <div class="row row-cols-3 row-cols-md-1 g-4">
+        <h1 class="display-6">How Stressed are You Feeling?</h1>
+            <label for="customRange3" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+        <h1 class="display-6">How Stressed are You Feeling?</h1>
+            <label for="customRange3" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+        <h1 class="display-6">How Stressed are You Feeling?</h1>
+            <label for="customRange3" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
     </div>
+    <a href="stress-level-checked.html">
+    <button type="submit" class="btn btn-primary">Submit</button>
+    </a>
   </div>
 
   <!-- our own footer goes here-->
