updated my user story

--- a/activities-main.html
+++ b/activities-main.html
@@ -78,7 +78,7 @@
                             <h5 class="card-title">Stress Checker</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="stress-checker.html" class="btn btn-primary">Let's check your stress, shall we?</a>
                         </div>
                     </div>
                 </div>
