--- a/main.html
+++ b/main.html
@@ -49,7 +49,9 @@
     <div class="container bg-light p-5">
       <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
       <hr>
-      <p>How can YOU help yourself today?</p>
+      <p class="lead">
+        How can YOU help yourself today?.
+      </p>
     </div>
   </div>
 
