--- a/calendar.html
+++ b/calendar.html
@@ -102,7 +102,7 @@
                 <div class="form-container">
                   <label class="form-label" id="valueFromMyButton" for="name">Event name</label>
                   <input class="input" type="text" id="name" maxlength="36">
-                  <label class="form-label" id="valueFromMyButton" for="count">Number of people to invite</label>
+                  <label class="form-label" id="valueFromMyButton" for="count">Hour(s) of task</label>
                   <input class="input" type="number" id="count" min="0" max="1000000" maxlength="7">
                   <input type="button" value="Cancel" class="button" id="cancel-button">
                   <input type="button" value="OK" class="button button-white" id="ok-button">
