added timer function

--- a/main.html
+++ b/main.html
@@ -93,7 +93,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <a class="cardLink">
+          <a class="cardLink" href="study-timer.html">
             <img src="./images/ddd.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Analyze!</h5>
