--- a/study-timer.html
+++ b/study-timer.html
@@ -60,7 +60,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h1>Bootstrap Stopwatch</h1>
+                        <h1>Study Timer</h1>
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -86,6 +86,9 @@
                     <button class="btn btn-success mx-2" id="start">Start</button>
                     <button class="btn btn-primary mx-2" id="stop">Stop</button>
                     <button class="btn btn-danger mx-2" id="reset">Reset</button>
+                </div>
+                <div class="go-to-Graph">
+                    <a href="graph.html">Check your progress</a>
                 </div>
             </div>
         </div>
