--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="./html/index.html">
           <img src="images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           EASIN
         </a>
@@ -12,11 +12,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                  <a class="nav-link" href="../aboutus.html">About Us</a>
+                  <a class="nav-link" href="aboutus.html">About Us</a>
               </li>
           </ul>
           <div class="d-flex">
-              <a class="btn btn-outline-success" href="../login.html">Login</a>
+              <a class="btn btn-outline-success" href="login.html">Login</a>
           </div>
       </div>
   </div>
