--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" href="./html/index.html">
+        <a class="navbar-brand" href="index.html">
           <img src="images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           EASIN
         </a>
