updated text on study timer

--- a/study-timer.html
+++ b/study-timer.html
@@ -60,7 +60,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h1>Bootstrap Stopwatch</h1>
+                        <h1>Study Timer</h1>
                     </div>
                 </div>
                 <div class="row mt-5">
