updated a bit of the text on the study timer.

--- a/study-timer.html
+++ b/study-timer.html
@@ -47,7 +47,7 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
+            <h1 class="display-4">It's time for a study session, <span id="name-goes-here"></span>!</h1>
         </div>
     </div>
 
@@ -75,7 +75,7 @@
                                         <span class="txt">Min</span>
                                         <span class="digit" id="sec">00</span>
                                         <span class="txt">Sec</span>
-                                        <span class="digit" id="count">00</span>
+                                        <!-- <span class="digit" id="count">00</span> -->
                                     </div>
                                 </div>
                             </div>
