added database storage for the study timer such that it will send total minutes studied to firestore

--- a/calendar.html
+++ b/calendar.html
@@ -134,6 +134,25 @@
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
+
+// Alex this is your script for your calendar
+// copy it and place it in a java file and reference it in here!
+
+    <!-- <script>
+      document.getElementById('ok-button').addEventListener('click', function() {
+        const eventName = document.getElementById('name').value;
+        const eventTime = Number(document.getElementById('count').value);
+
+        db.collection("Calendar").doc("Event").set({
+          name: eventName,
+          hours: eventTime
+        }).then(() => {
+          console.log('Event information sent to Firebase');
+        }).catch((error) => {
+          console.error('Error sending Event information to Firebase', error);
+        });
+      });
+    </script> -->
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
