--- a/stress-checker.html
+++ b/stress-checker.html
@@ -60,18 +60,18 @@
   <div class="container">
     <div class="row row-cols-3 row-cols-md-1 g-4">
         <h1 class="display-6">How Stressed are You Feeling?</h1>
-            <label for="customRange3" class="form-label">Example range</label>
-            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+            <label for="input1" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="input1">
         <h1 class="display-6">How Stressed are You Feeling?</h1>
-            <label for="customRange3" class="form-label">Example range</label>
-            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+            <label for="input2" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="input2">
         <h1 class="display-6">How Stressed are You Feeling?</h1>
-            <label for="customRange3" class="form-label">Example range</label>
-            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+            <label for="input3" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="input3">
     </div>
-    <a href="stress-level-checked.html">
-    <button type="submit" class="btn btn-primary">Submit</button>
-    </a>
+    <!-- <a href="stress-level-checked.html"> -->
+    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+    <!-- </a> -->
   </div>
 
   <!-- our own footer goes here-->
@@ -83,6 +83,31 @@
 
   <!-- Link to scripts of your own -->
   <!-- <script src="./scripts/script.js"></script> -->
+
+  // Mark this is your script for the stress checker
+  // copy it and place it in a java file and reference it in here!
+
+  <!-- <script>
+   document.getElementById('submit').addEventListener('click', function() {
+    const input1 = Number(document.getElementById('input1').value);
+    const input2 = Number(document.getElementById('input2').value);
+    const input3 = Number(document.getElementById('input3').value);
+    
+    const sum = input1 + input2 + input3;
+
+    // Send the sum to Firebase
+    db.collection("StressChecker").doc('StressScore').set({
+      score: sum
+    }).then(() => {
+      console.log('Sum sent to Firebase');
+    }).catch((error) => {
+      console.error('Error sending sum to Firebase:', error);
+    });
+  });
+    
+  </script> -->
+
+
   <script src="./scripts/firebaseAPI_BBY29.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
