--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -10,10 +10,34 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">About Us</a>
+            <a class="nav-link active" aria-current="page" href="#" id="nav-user-name"></a>
           </li>
         </ul>
-        <button onclick="window.location.href='index.html'" class="btn btn-primary btn-lg" type="button">Log Out</button>
+        <button onclick="window.location.href='index.html'" class="btn btn-primary btn-lg" type="button" style="margin: 0 1vw;">Log Out</button>
       </div>
     </div>
 </nav>
+<script>
+  function navUserName() {
+    firebase.auth().onAuthStateChanged(user => {
+        // Check if a user is signed in:
+        if (user) {
+            userName = user.displayName;
+
+            //method #1:  insert with JS
+            document.getElementById("nav-user-name").innerText = userName;    
+
+            //method #2:  insert using jquery
+            //$("#name-goes-here").text(userName); //using jquery
+
+            //method #3:  insert using querySelector
+            //document.querySelector("#name-goes-here").innerText = userName
+
+        } else {
+            // No user is signed in.
+            console.log ("No user is logged in");
+        }
+    });
+  }
+  navUserName(); //run the function
+</script>
