--- a/calendar.html
+++ b/calendar.html
@@ -51,7 +51,7 @@
         <div class="col-md-12">
           <div class="content w-100">
             <div class="calendar-container">
-              <div class="calendar">
+              <div class="calendar" id="calendar-div">
                 <div class="year-header">
                   <span class="left-button fa fa-chevron-left" id="prev"> </span>
                   <span class="year" id="label"></span>
@@ -156,6 +156,7 @@
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
+    
 
   </body>
 
