--- a/calendar.html
+++ b/calendar.html
@@ -156,8 +156,8 @@
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
-    
-
+    <script src="./scripts/ok_button.js"></script>    
+    <script src="./scripts/calendarDB.js"></script>
   </body>
 
 </html>
