--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
         <a class="navbar-brand" href="main.html">
-          <img src="images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          <img src="/images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           EASIN
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
