added firebase interaction with stress checker mvp.

--- a/stress-checker.html
+++ b/stress-checker.html
@@ -47,7 +47,7 @@
 
   <div class="container-fluid bg-light text-dark p-5">
     <div class="container bg-light p-5">
-      <h1 class="display-4">Stress Checker</h1>
+      <h1 class="display-4">Stress Checker - <span id="name-goes-here"></span></h1>
     </div>
   </div>
 
@@ -69,7 +69,7 @@
             <label for="input3" class="form-label">Example range</label>
             <input type="range" class="form-range" min="0" max="5" step="0.5" id="input3">
     </div>
-    <a href="stress-level-checked.html">
+    <!-- <a href="stress-level-checked.html"> -->
     <button type="submit" class="btn btn-primary" id="submit">Submit</button>
     </a>
   </div>
