Finished up index.html, login.html, and main.html, added some nice elements, updated the navbar to include the cards that were removed

--- a/activities-main.html
+++ b/activities-main.html
@@ -63,9 +63,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Activities</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Here's your recommended activities! Let's do some and ease some of that stress!</p>
+                        <a href="activities-recommended-high.html" class="btn btn-primary">Lets do it!</a>
                     </div>
                 </div>
             </div>
@@ -76,8 +75,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title">Stress Checker</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Feeling stressed out? Lets get a better picture!</p>
                             <a href="stress-checker.html" class="btn btn-primary">Let's check your stress, shall we?</a>
                         </div>
                     </div>
@@ -98,6 +96,7 @@
     <!-- <script src="./scripts/script.js"></script> -->
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/main.js"></script>
     <script src="./scripts/main.js"></script>
 
 </body>
