--- a/login.html
+++ b/login.html
@@ -43,15 +43,16 @@
     <!------------------------------>
     <!-- Stuff for body goes here -->
 
-    <div class="container">
-      <h1>Let's Login!</h1>
-    </div>
+    <div class="px-4 pt-5 my-5 text-center">
+        <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+                <img src="images/956860-200.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
+                    width="200" height="200" loading="lazy">
+            </div>
+        </div>
+        <h4 class="display-6 fw-bold">Let's Get You Going!</h1>
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
-          
-          <!-- Add an onclick attribute to define click event handler -->
-          <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
-      </div>
   </div>
 
   
