--- a/main.html
+++ b/main.html
@@ -45,24 +45,47 @@
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
-  <div class="container-fluid bg-light text-dark p-5">
-    <div class="container bg-light p-5">
+  <div class="container-fluid text-white p-5">
+    <div class="container bg-success p-5">
       <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
       <hr>
       <p class="lead">
-        How can YOU help yourself today?.
+        Take a look around. There's not much to see, but you'll find us very useful!
       </p>
+      <p class="lead">
+        Check your stress, plan some study sessions with our Schedule function, or just set up a timer to organize your studies!
+      </p>
+      <p class="lead">
+        Let's get YOU on track!
+      </p>
+    </div>
+    <br>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+        <div class="col">
+          <div class="card h-100">
+            <a class="cardLink" href="activities-main.html">
+              <img src="./images/aaa.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">What is your stress?</h5>
+                <p class="card-text">Different stress needs different solutions.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Let's figure it out!</small>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Add an onclick attribute to define click event handler -->
   <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
-  </div>
-  </div>
 
 
-  <div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+  <!-- div class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
       <div class="col">
         <div class="card h-100">
           <a class="cardLink" href="activities-main.html">
@@ -72,45 +95,16 @@
               <p class="card-text">Different stress needs different solutions.</p>
             </div>
             <div class="card-footer">
-              <small class="text-muted">2024.02.06</small>
+              <small class="text-muted">Let's figure it out!</small>
             </div>
           </a>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a class="cardLink" href="calendar.html">
-            <img src="./images/bbb.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Task Calendar</h5>
-              <p class="card-text">Let's Organize</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last visited <span id="lastDate"></span></small>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a class="cardLink" href="study-timer.html">
-            <img src="./images/ddd.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Analyze!</h5>
-              <p class="card-text">Make a data analysis of your changes.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">2024.02.06</small>
-            </div>
-          </a>
-        </div>
-        </a>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- our own footer goes here-->
-  <nav id="footerPlaceholder"></nav>
+  <nav id="footerPlaceholder"></nav> 
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
