--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,22 +1,37 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="main.html">
-          <img src="/images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-          EASIN
-        </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" id="nav-user-name"></a>
-          </li>
-        </ul>
-        <button onclick="window.location.href='index.html'" class="btn btn-primary btn-lg" type="button" style="margin: 0 1vw;">Log Out</button>
-      </div>
+  <div class="container-fluid">
+    <img src="/images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+    <div class="navbar-brand">
+      EASIN
     </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- <li class="nav-item">
+          <a class="nav-link active" aria-current="page" id="nav-user-name"></a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="main.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="graph.html">Progress</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="calendar.html">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="study-timer.html">Study Timer</a>
+        </li>
+      </ul>
+      <button onclick="window.location.href='index.html'" class="btn btn-primary btn-lg" type="button"
+        style="margin: 0 1vw;">Log Out</button>
+    </div>
+  </div>
 </nav>
+
 <script>
   function navUserName() {
     firebase.auth().onAuthStateChanged(user => {
