here comes the graph.js update

--- a/graph.html
+++ b/graph.html
@@ -51,7 +51,7 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
+            <h1 class="display-4">How are you doing <span id="name-goes-here"></span>?</h1>
         </div>
     </div>
 
@@ -61,7 +61,6 @@
     </div>
     
     <div class="container">
-        <h2>Line Chart</h2>
         <div>
             <canvas id="myChart"></canvas>
         </div>
@@ -79,7 +78,6 @@
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
-    <script src="./scripts/timer.js"></script>
     <script src="./scripts/graph.js"></script>
 
 </body>
