--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
   <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -46,12 +47,18 @@
   <div class="container text-center py-4">
     <h1>Welcome to EASIN!</h1>
     <p>We hope you guys enjoy!.</p>
-    <p>At EASIN, we're dedicated to providing innovative solutions for stress management. Life can be hectic, and we understand the importance of finding balance and peace of mind. Our app is specifically designed with students like you in mind, offering practical tools and resources to help you navigate the challenges of academic and personal life.</p>
-    <p>Whether you're feeling overwhelmed by exams, deadlines, or simply the pressures of everyday life, EASIN is here to support you. From guided meditation sessions to stress-relief exercises, our app offers a variety of features to help you unwind and regain focus.</p>
-    <p>Join us on this journey to a calmer, more balanced life. We invite you to explore our app and discover how EASIN can empower you to manage stress effectively and thrive in all aspects of your life.</p>
+    <p>At EASIN, we're dedicated to providing innovative solutions for stress management. Life can be hectic, and we
+      understand the importance of finding balance and peace of mind. Our app is specifically designed with students
+      like you in mind, offering practical tools and resources to help you navigate the challenges of academic and
+      personal life.</p>
+    <p>Whether you're feeling overwhelmed by exams, deadlines, or simply the pressures of everyday life, EASIN is here
+      to support you. From guided meditation sessions to stress-relief exercises, our app offers a variety of features
+      to help you unwind and regain focus.</p>
+    <p>Join us on this journey to a calmer, more balanced life. We invite you to explore our app and discover how EASIN
+      can empower you to manage stress effectively and thrive in all aspects of your life.</p>
     <p>Thank you for choosing EASIN. We hope you find our demonstration enjoyable and informative!</p>
   </div>
-  
+
 
   <!-- Add an onclick attribute to define click event handler -->
   <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
