--- a/activities-recommended-med.html
+++ b/activities-recommended-med.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
     <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -61,7 +62,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Do Some Deep Breathing</h5>
-                        <p class="card-text">Deep breathing is one of the best ways to lower stress in your body, as it sends a message to your brain to calm down. Try breathing in and out, deeply, for a few minutes, and feel the difference!</p>
+                        <p class="card-text">Deep breathing is one of the best ways to lower stress in your body, as it
+                            sends a message to your brain to calm down. Try breathing in and out, deeply, for a few
+                            minutes, and feel the difference!</p>
                         <a href="#" class="btn btn-primary">All Done!</a>
                     </div>
                 </div>
@@ -70,7 +73,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Have Some Chocolate</h5>
-                        <p class="card-text">Chocolate, specifically dark chocolate, is scientifically proven to help reduce symptoms of stress and anxiety. Reward yourself with some chocolate, you've earned it!</p>
+                        <p class="card-text">Chocolate, specifically dark chocolate, is scientifically proven to help
+                            reduce symptoms of stress and anxiety. Reward yourself with some chocolate, you've earned
+                            it!</p>
                         <a href="#" class="btn btn-primary">All Done!</a>
                     </div>
                 </div>
@@ -79,25 +84,26 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Create/Update a Task Planner</h5>
-                        <p class="card-text">One of the main contributions to stress are the things you have to do. Putting everything you need to get done into a planner can make the week seem do-able! </p>
+                        <p class="card-text">One of the main contributions to stress are the things you have to do.
+                            Putting everything you need to get done into a planner can make the week seem do-able! </p>
                         <a href="#" class="btn btn-primary">All Done!</a>
                     </div>
                 </div>
             </div>
         </div>
 
-            <!-- our own footer goes here-->
-            <nav id="footerPlaceholder"></nav>
+        <!-- our own footer goes here-->
+        <nav id="footerPlaceholder"></nav>
 
-            <!---------------------------------------------->
-            <!-- Your own JavaScript functions go here    -->
-            <!---------------------------------------------->
+        <!---------------------------------------------->
+        <!-- Your own JavaScript functions go here    -->
+        <!---------------------------------------------->
 
-            <!-- Link to scripts of your own -->
-            <!-- <script src="./scripts/script.js"></script> -->
-            <script src="./scripts/firebaseAPI_BBY29.js"></script>
-            <script src="./scripts/skeleton.js"></script>
-            <script src="./scripts/main.js"></script>
+        <!-- Link to scripts of your own -->
+        <!-- <script src="./scripts/script.js"></script> -->
+        <script src="./scripts/firebaseAPI_BBY29.js"></script>
+        <script src="./scripts/skeleton.js"></script>
+        <script src="./scripts/main.js"></script>
 
 </body>
 
