--- a/activities-main.html
+++ b/activities-main.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
     <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -63,7 +64,8 @@
 
                     <div class="card-body">
                         <h5 class="card-title">Activities</h5>
-                        <p class="card-text">Here's your recommended activities! Let's do some and ease some of that stress!</p>
+                        <p class="card-text">Here's your recommended activities! Let's do some and ease some of that
+                            stress!</p>
                         <a href="activities-recommended-high.html" class="btn btn-primary">Lets do it!</a>
                     </div>
                 </div>
