--- a/activities-recommended-high.html
+++ b/activities-recommended-high.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
     <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -93,43 +94,43 @@
             </div>
         </div> -->
 
-        <div class="container"> 
-            <h1>Some popular activities</h1>
-            <!-- Here is the container for cards  -->
-            <div class="container">
-                <div id="activities-go-here" class="row row-cols-auto">
+    <div class="container">
+        <h1>Some popular activities</h1>
+        <!-- Here is the container for cards  -->
+        <div class="container">
+            <div id="activities-go-here" class="row row-cols-auto">
+            </div>
+        </div>
+
+        <!-- Templates for general use, not displayed -->
+        <template id="activitiesTemplate">
+            <div class="card py-2 mx-2" style="width: 18rem">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <br />
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the
+                        bulk of the card's content.
+                    </p>
+                    <a class="btn btn-primary card-href">Read more ...</a>
                 </div>
             </div>
-
-            <!-- Templates for general use, not displayed -->
-<template id="activitiesTemplate">
-    <div class="card py-2 mx-2" style="width: 18rem">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <br />
-            <p class="card-text">
-                Some quick example text to build on the card title and make up the
-                bulk of the card's content.
-            </p>
-            <a class="btn btn-primary card-href">Read more ...</a>
-        </div>
-    </div>
-</template>
+        </template>
     </div>
 
-            <!-- our own footer goes here-->
-            <nav id="footerPlaceholder"></nav>
+    <!-- our own footer goes here-->
+    <nav id="footerPlaceholder"></nav>
 
-            <!---------------------------------------------->
-            <!-- Your own JavaScript functions go here    -->
-            <!---------------------------------------------->
+    <!---------------------------------------------->
+    <!-- Your own JavaScript functions go here    -->
+    <!---------------------------------------------->
 
-            <!-- Link to scripts of your own -->
-            <!-- <script src="./scripts/script.js"></script> -->
-            <script src="./scripts/firebaseAPI_BBY29.js"></script>
-            <script src="./scripts/skeleton.js"></script>
-            <script src="./scripts/main.js"></script>
-            <script src="./scripts/activities-recommended-high.js"></script>
+    <!-- Link to scripts of your own -->
+    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="./scripts/firebaseAPI_BBY29.js"></script>
+    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/activities-recommended-high.js"></script>
 
 </body>
 
