--- a/activities-recommended-list.html
+++ b/activities-recommended-list.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
     <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -86,18 +87,18 @@
             </div>
         </div>
 
-            <!-- our own footer goes here-->
-            <nav id="footerPlaceholder"></nav>
+        <!-- our own footer goes here-->
+        <nav id="footerPlaceholder"></nav>
 
-            <!---------------------------------------------->
-            <!-- Your own JavaScript functions go here    -->
-            <!---------------------------------------------->
+        <!---------------------------------------------->
+        <!-- Your own JavaScript functions go here    -->
+        <!---------------------------------------------->
 
-            <!-- Link to scripts of your own -->
-            <!-- <script src="./scripts/script.js"></script> -->
-            <script src="./scripts/firebaseAPI_BBY29.js"></script>
-            <script src="./scripts/skeleton.js"></script>
-            <script src="./scripts/main.js"></script>
+        <!-- Link to scripts of your own -->
+        <!-- <script src="./scripts/script.js"></script> -->
+        <script src="./scripts/firebaseAPI_BBY29.js"></script>
+        <script src="./scripts/skeleton.js"></script>
+        <script src="./scripts/main.js"></script>
 
 </body>
 
