--- a/calendar.html
+++ b/calendar.html
@@ -1,142 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App">
+<head>
+  <title>My BCIT Project</title>
+  <meta name="comp1800 template" content="My 1800 App">
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap Library CSS CDN go here -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Boostrap Library JS CDN  go here -->
+  <!-- Bootstrap Library CSS CDN go here -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
+  <!-- Boostrap Library JS CDN  go here -->
 
 
-    <!--jQuery and Firebase Services-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <!--jQuery and Firebase Services-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
-    <!-- Other libraries go here -->
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="scripts/piratedJS.js"></script>
+  <!-- Other libraries go here -->
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="scripts/piratedJS.js"></script>
 
-    <!-- Link to styles of your own -->
-    <link rel="stylesheet" href="./styles/style.css">
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-    
+  <!-- Link to styles of your own -->
+  <link rel="stylesheet" href="./styles/style.css">
+  <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
-  </head>
 
-  <body>
+</head>
 
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
+<body>
 
-    <!--Our own navbar goes here-->
-    <nav id="navbarPlaceholder"></nav>
+  <!------------------------------>
+  <!-- Your HTML Layout go here -->
 
-    <!------------------------------>
-    <!-- Stuff for body goes here -->
+  <!--Our own navbar goes here-->
+  <nav id="navbarPlaceholder"></nav>
 
-    <div class="container-fluid bg-light text-dark p-5">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="content w-100">
-            <div class="calendar-container">
-              <div class="calendar" id="calendar-div">
-                <div class="year-header">
-                  <span class="left-button fa fa-chevron-left" id="prev"> </span>
-                  <span class="year" id="label"></span>
-                  <span class="right-button fa fa-chevron-right" id="next"> </span>
-                </div>
-                <table class="months-table w-100">
-                  <tbody>
-                    <tr class="months-row">
-                      <td class="month">Jan</td>
-                      <td class="month">Feb</td>
-                      <td class="month">Mar</td>
-                      <td class="month">Apr</td>
-                      <td class="month">May</td>
-                      <td class="month">Jun</td>
-                      <td class="month">Jul</td>
-                      <td class="month">Aug</td>
-                      <td class="month">Sep</td>
-                      <td class="month">Oct</td>
-                      <td class="month">Nov</td>
-                      <td class="month">Dec</td>
-                    </tr>
+  <!------------------------------>
+  <!-- Stuff for body goes here -->
+
+  <div class="container-fluid bg-light text-dark p-5">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="content w-100">
+          <div class="calendar-container">
+            <div class="calendar" id="calendar-div">
+              <div class="year-header">
+                <span class="left-button fa fa-chevron-left" id="prev"> </span>
+                <span class="year" id="label"></span>
+                <span class="right-button fa fa-chevron-right" id="next"> </span>
+              </div>
+              <table class="months-table w-100">
+                <tbody>
+                  <tr class="months-row">
+                    <td class="month">Jan</td>
+                    <td class="month">Feb</td>
+                    <td class="month">Mar</td>
+                    <td class="month">Apr</td>
+                    <td class="month">May</td>
+                    <td class="month">Jun</td>
+                    <td class="month">Jul</td>
+                    <td class="month">Aug</td>
+                    <td class="month">Sep</td>
+                    <td class="month">Oct</td>
+                    <td class="month">Nov</td>
+                    <td class="month">Dec</td>
+                  </tr>
+                </tbody>
+              </table>
+              <table class="days-table w-100">
+                <td class="day">Sun</td>
+                <td class="day">Mon</td>
+                <td class="day">Tue</td>
+                <td class="day">Wed</td>
+                <td class="day">Thu</td>
+                <td class="day">Fri</td>
+                <td class="day">Sat</td>
+              </table>
+              <div class="frame">
+                <table class="dates-table w-100">
+                  <tbody class="tbody">
+                    <tr class="table-row"></tr>
                   </tbody>
                 </table>
-                <table class="days-table w-100">
-                  <td class="day">Sun</td>
-                  <td class="day">Mon</td>
-                  <td class="day">Tue</td>
-                  <td class="day">Wed</td>
-                  <td class="day">Thu</td>
-                  <td class="day">Fri</td>
-                  <td class="day">Sat</td>
-                </table>
-                <div class="frame">
-                  <table class="dates-table w-100">
-                    <tbody class="tbody">
-                      <tr class="table-row"></tr>
-                    </tbody>
-                  </table>
-                </div>
-                <button class="button" id="add-button">Add Event</button>
               </div>
+              <button class="button" id="add-button">Add Event</button>
             </div>
-            <div class="events-container">
-            </div>
-            <div class="dialog" id="dialog">
-              <h2 class="dialog-header"> Add New Event </h2>
-              <form class="form" id="form">
-                <div class="form-container">
-                  <label class="form-label" id="valueFromMyButton" for="name">Event name</label>
-                  <input class="input" type="text" id="name" maxlength="36">
-                  <label class="form-label" id="valueFromMyButton" for="count">Hour(s) of task</label>
-                  <input class="input" type="number" id="count" min="0" max="1000000" maxlength="7">
-                  <input type="button" value="Cancel" class="button" id="cancel-button">
-                  <input type="button" value="OK" class="button button-white" id="ok-button">
-                </div>
-              </form>
-            </div>
+          </div>
+          <div class="events-container">
+          </div>
+          <div class="dialog" id="dialog">
+            <h2 class="dialog-header"> Add New Event </h2>
+            <form class="form" id="form">
+              <div class="form-container">
+                <label class="form-label" id="valueFromMyButton" for="name">Event name</label>
+                <input class="input" type="text" id="name" maxlength="36">
+                <label class="form-label" id="valueFromMyButton" for="count">Hour(s) of task</label>
+                <input class="input" type="number" id="count" min="0" max="1000000" maxlength="7">
+                <input type="button" value="Cancel" class="button" id="cancel-button">
+                <input type="button" value="OK" class="button button-white" id="ok-button">
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-    </div>
+  </div>
+  </div>
 
-    <!-- Add an onclick attribute to define click event handler -->
-    <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
-    </div>
-    </div>
-
-
-    <div class="container">
-
-    </div>
-
-    <!-- our own footer goes here-->
-    <nav id="footerPlaceholder"></nav>
-
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
-
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
+  <!-- Add an onclick attribute to define click event handler -->
+  <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
+  </div>
+  </div>
 
 
-    <!-- <script>
+  <div class="container">
+
+  </div>
+
+  <!-- our own footer goes here-->
+  <nav id="footerPlaceholder"></nav>
+
+  <!---------------------------------------------->
+  <!-- Your own JavaScript functions go here    -->
+  <!---------------------------------------------->
+
+  <!-- Link to scripts of your own -->
+  <!-- <script src="./scripts/script.js"></script> -->
+
+
+  <!-- <script>
       document.getElementById('ok-button').addEventListener('click', function() {
         const eventName = document.getElementById('name').value;
         const eventTime = Number(document.getElementById('count').value);
@@ -151,11 +152,11 @@
         });
       });
     </script> -->
-    <script src="./scripts/firebaseAPI_BBY29.js"></script>
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/main.js"></script>
-    <script src="./scripts/ok_button.js"></script>    
-    <script src="./scripts/calendarDB.js"></script>
-  </body>
+  <script src="./scripts/firebaseAPI_BBY29.js"></script>
+  <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/main.js"></script>
+  <script src="./scripts/ok_button.js"></script>
+  <script src="./scripts/calendarDB.js"></script>
+</body>
 
 </html>
