--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
     <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -23,7 +24,7 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    
+
     <!-- Other libraries go here -->
 
     <!-- Link to styles of your own -->
@@ -51,14 +52,14 @@
             </div>
         </div>
         <h4 class="display-6 fw-bold">Let's Get You Going!</h1>
-    <div id="firebaseui-auth-container"></div>
-    <div id="loader">Loading...</div>
-  </div>
+            <div id="firebaseui-auth-container"></div>
+            <div id="loader">Loading...</div>
+    </div>
 
-  
 
-  <!-- our own footer goes here-->
-  <nav id="footerPlaceholder"></nav>
+
+    <!-- our own footer goes here-->
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
