--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
   <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -25,7 +26,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <!-- Other libraries go here -->
-  
+
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="styles/style.css">
@@ -53,7 +54,8 @@
         Take a look around. There's not much to see, but you'll find us very useful!
       </p>
       <p class="lead">
-        Check your stress, plan some study sessions with our Schedule function, or just set up a timer to organize your studies!
+        Check your stress, plan some study sessions with our Schedule function, or just set up a timer to organize your
+        studies!
       </p>
       <p class="lead">
         Let's get YOU on track!
@@ -104,7 +106,7 @@
   </div> -->
 
   <!-- our own footer goes here-->
-  <nav id="footerPlaceholder"></nav> 
+  <nav id="footerPlaceholder"></nav>
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
