--- a/stress-level-checked.html
+++ b/stress-level-checked.html
@@ -12,6 +12,7 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
   <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -25,7 +26,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <!-- Other libraries go here -->
-  
+
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="styles/style.css">
@@ -59,19 +60,20 @@
 
   <div class="container">
     <div class="row row-cols-3 row-cols-md-1 g-4">
-        <h1 class="display-6">You Are Feeling...</h1>
-        <p class="lead">
-          Pretty stressed out. Remember that prolonged stress can lead to worsening conditions, like anxiety and depression! Would you like to be recommended some exercises to help ease your stress?
-        </p>        
+      <h1 class="display-6">You Are Feeling...</h1>
+      <p class="lead">
+        Pretty stressed out. Remember that prolonged stress can lead to worsening conditions, like anxiety and
+        depression! Would you like to be recommended some exercises to help ease your stress?
+      </p>
     </div>
     <a href="activities-recommended-list.html">
-    <button type="submit" class="btn btn-primary">Yes</button>
+      <button type="submit" class="btn btn-primary">Yes</button>
     </a>
     <br>
     <br>
     <a href="main.html">
       <button type="submit" class="btn btn-primary">No</button>
-      </a>
+    </a>
   </div>
 
   <!-- our own footer goes here-->
