--- a/stress-lowStress.html
+++ b/stress-lowStress.html
@@ -12,6 +12,7 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
   <!-- Boostrap Library JS CDN  go here -->
 
 
@@ -25,7 +26,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <!-- Other libraries go here -->
-  
+
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="styles/style.css">
@@ -61,7 +62,7 @@
     <div class="row row-cols-3 row-cols-md-1 g-4">
       <h1 class="display-6">You Are Feeling...</h1>
       <p class="lead">
-        Low levels of stress. 
+        Low levels of stress.
       </p>
       <p class="lead">
         Just remember to check back in when you feel like it, busy times are always ahead!
@@ -69,8 +70,8 @@
       <p class="lead">
         You can always do some activities if you'd like!
       </p>
-    <br>
-    <br>
+      <br>
+      <br>
     </div>
     <a href="activities-recommended-low.html">
       <button type="submit" class="btn btn-primary">Let's Do It!</button>
