Updated stress checker features with dynamic loading of activities. The buttons now grey out when disabled. Once all buttons have been disabled, redirection takes you to a 'done' page and local storage is updated with done=true

--- a/activities-recommended-high.html
+++ b/activities-recommended-high.html
@@ -111,7 +111,7 @@
                 Some quick example text to build on the card title and make up the
                 bulk of the card's content.
             </p>
-            <a class="btn btn-primary card-href">Read more ...</a>
+            <button class="btn btn-primary card-href">Done</button>
         </div>
     </div>
 </template>
