--- a/activities-recommended-low.html
+++ b/activities-recommended-low.html
@@ -55,7 +55,7 @@
     </div>
 
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col d-flex justify-content-center">
             <div class="col-sm-3">
                 <div class="card">
@@ -84,7 +84,32 @@
                     </div>
                 </div>
             </div>
+        </div> -->
+
+        <div class="container"> 
+            <h1>Some popular activities</h1>
+            <!-- Here is the container for cards  -->
+            <div class="container">
+                <div id="activities-go-here" class="row row-cols-auto">
+                </div>
+            </div>
+
+            <!-- Templates for general use, not displayed -->
+<template id="activitiesTemplate">
+    <div class="card py-2 mx-2" style="width: 18rem">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <br />
+            <p class="card-text">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+            </p>
+            <button class="btn btn-primary card-href">Done</button>
         </div>
+    </div>
+</template>
+
+
 
             <!-- our own footer goes here-->
             <nav id="footerPlaceholder"></nav>
@@ -98,6 +123,7 @@
             <script src="./scripts/firebaseAPI_BBY29.js"></script>
             <script src="./scripts/skeleton.js"></script>
             <script src="./scripts/main.js"></script>
+            <script src="./scripts/activities-recommended-low.js"></script>
 
 </body>
 
