Organized html pages and cleaned up comments, deleted template pages

--- a/calendar.html
+++ b/calendar.html
@@ -26,13 +26,10 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <!-- Other libraries go here -->
-  <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/piratedJS.js"></script>
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
-  <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-
 
 </head>
 
@@ -114,16 +111,7 @@
       </div>
     </div>
   </div>
-  </div>
-
-  <!-- Add an onclick attribute to define click event handler -->
-  <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
-  </div>
-  </div>
-
-
   <div class="container">
-
   </div>
 
   <!-- our own footer goes here-->
@@ -134,24 +122,7 @@
   <!---------------------------------------------->
 
   <!-- Link to scripts of your own -->
-  <!-- <script src="./scripts/script.js"></script> -->
-
-
-  <!-- <script>
-      document.getElementById('ok-button').addEventListener('click', function() {
-        const eventName = document.getElementById('name').value;
-        const eventTime = Number(document.getElementById('count').value);
-
-        db.collection("Calendar").doc("Event").set({
-          name: eventName,
-          hours: eventTime
-        }).then(() => {
-          console.log('Event information sent to Firebase');
-        }).catch((error) => {
-          console.error('Error sending Event information to Firebase', error);
-        });
-      });
-    </script> -->
+  <script src="./scripts/script.js"></script>
   <script src="./scripts/firebaseAPI_BBY29.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
