--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -10,9 +10,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" id="nav-user-name"></a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="main.html">Home</a>
         </li>
@@ -39,14 +36,8 @@
       if (user) {
         userName = user.displayName;
 
-        //method #1:  insert with JS
+        // insert with JS
         document.getElementById("nav-user-name").innerText = userName;
-
-        //method #2:  insert using jquery
-        //$("#name-goes-here").text(userName); //using jquery
-
-        //method #3:  insert using querySelector
-        //document.querySelector("#name-goes-here").innerText = userName
 
       } else {
         // No user is signed in.
