--- a/activities-main.html
+++ b/activities-main.html
@@ -12,8 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
-    <!-- Boostrap Library JS CDN  go here -->
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon"/>
 
 
     <!--jQuery and Firebase Services-->
@@ -29,7 +28,6 @@
 
     <!-- Link to styles of your own -->
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
 </head>
 
@@ -77,11 +75,6 @@
         </div>
     </div>
 
-    <!-- Add an onclick attribute to define click event handler -->
-    <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
-    </div>
-    </div>
-
 
     
     <!-- our own footer goes here-->
@@ -92,10 +85,9 @@
     <!---------------------------------------------->
 
     <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="./scripts/script.js"></script>
     <script src="./scripts/firebaseAPI_BBY29.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/main.js"></script>
     <script src="./scripts/main.js"></script>
 
 </body>
