--- a/activities-recommended-med.html
+++ b/activities-recommended-med.html
@@ -12,8 +12,7 @@
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="/images/956860-200.png" rel="icon" type="image/x-icon" />
-    <!-- Boostrap Library JS CDN  go here -->
+    <link href="/images/956860-200.png" rel="icon" type="image/x-icon"/>
 
 
     <!--jQuery and Firebase Services-->
@@ -29,7 +28,6 @@
 
     <!-- Link to styles of your own -->
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
 </head>
 
@@ -50,48 +48,6 @@
         </div>
     </div>
 
-    <!-- Add an onclick attribute to define click event handler -->
-    <!-- <button onclick="window.location.href='login.html'" class="btn btn-primary btn-lg" type="button">Login/Signup</button> -->
-    </div>
-    </div>
-
-
-    <!-- <div class="row">
-        <div class="col d-flex justify-content-center">
-            <div class="col-sm-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Do Some Deep Breathing</h5>
-                        <p class="card-text">Deep breathing is one of the best ways to lower stress in your body, as it
-                            sends a message to your brain to calm down. Try breathing in and out, deeply, for a few
-                            minutes, and feel the difference!</p>
-                        <a href="#" class="btn btn-primary">All Done!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Have Some Chocolate</h5>
-                        <p class="card-text">Chocolate, specifically dark chocolate, is scientifically proven to help
-                            reduce symptoms of stress and anxiety. Reward yourself with some chocolate, you've earned
-                            it!</p>
-                        <a href="#" class="btn btn-primary">All Done!</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Create/Update a Task Planner</h5>
-                        <p class="card-text">One of the main contributions to stress are the things you have to do.
-                            Putting everything you need to get done into a planner can make the week seem do-able! </p>
-                        <a href="#" class="btn btn-primary">All Done!</a>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
         <div class="container"> 
             <h1>Some popular activities</h1>
             <!-- Here is the container for cards  -->
@@ -101,19 +57,19 @@
             </div>
 
             <!-- Templates for general use, not displayed -->
-<template id="activitiesTemplate">
-    <div class="card py-2 mx-2" style="width: 18rem">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <br />
-            <p class="card-text">
-                Some quick example text to build on the card title and make up the
-                bulk of the card's content.
-            </p>
-            <button class="btn btn-primary card-href">Done</button>
-        </div>
-    </div>
-</template>
+        <template id="activitiesTemplate">
+            <div class="card py-2 mx-2" style="width: 18rem">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <br />
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the
+                        bulk of the card's content.
+                    </p>
+                    <button class="btn btn-primary card-href">Done</button>
+                </div>
+            </div>
+        </template>
 
         <!-- our own footer goes here-->
         <nav id="footerPlaceholder"></nav>
@@ -123,7 +79,7 @@
         <!---------------------------------------------->
 
             <!-- Link to scripts of your own -->
-            <!-- <script src="./scripts/script.js"></script> -->
+            <script src="./scripts/script.js"></script> 
             <script src="./scripts/firebaseAPI_BBY29.js"></script>
             <script src="./scripts/skeleton.js"></script>
             <script src="./scripts/main.js"></script>
