made some minor changes to footer

--- a/calendar.html
+++ b/calendar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>EASIN</title>
+  <title>My BCIT Project</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!-- Required meta tags -->
@@ -114,7 +114,7 @@
   <div class="container">
   </div>
 
-  <!-- footer -->
+  <!-- our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
 
   <!---------------------------------------------->
@@ -122,11 +122,12 @@
   <!---------------------------------------------->
 
   <!-- Link to scripts of your own -->
-  <script src="./scripts/script.js"></script> 
+  <script src="./scripts/script.js"></script>
   <script src="./scripts/firebaseAPI_BBY29.js"></script>
   <script src="./scripts/skeleton.js"></script>
   <script src="./scripts/main.js"></script>
   <script src="./scripts/ok_button.js"></script>
+  <script src="./scripts/calendarDB.js"></script>
 </body>
 
 </html>
