fixed formatting issues

--- a/activities-recommended-low.html
+++ b/activities-recommended-low.html
@@ -51,7 +51,6 @@
     </div>
 
     <div class="container">
-        <h1>Some popular activities</h1>
         <!-- Here is the container for cards  -->
         <div class="container">
             <div id="activities-go-here" class="row row-cols-auto">
@@ -60,7 +59,7 @@
 
         <!-- Templates for general use, not displayed -->
         <template id="activitiesTemplate">
-            <div class="card py-2 mx-2" style="width: 18rem">
+            <div class="card py-2 mx-2 mb-5" style="width: 18rem">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <br />
