--- a/done.html
+++ b/done.html
@@ -51,7 +51,7 @@
       <h2 class="lead">
         Great! Looks like you have finished all of your activities for the day!
       </h2>
-      <img src="images/biglebowskytumb.webp" alt="Logo" width="500" height="500" class="d-inline-block align-text-top">
+      <img src="images/biglebowskytumb.webp" alt="Logo" width="500" id="thumb" height="500" class="d-inline-block align-text-top">
     </div>
   </div>
   <!-- our own footer goes here-->
