--- a/stress-medStress.html
+++ b/stress-medStress.html
@@ -44,7 +44,39 @@
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
-  <div class="container-fluid bg-light text-dark p-5">
+  <div class="container-fluid bg-light text-dark p-5 mt-3">
+    <div class="container bg-light p-5">
+      <h1 class="display-4">What's your Stress?</h1>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-1 g-4">
+      <h1 class="display-6">You Are Feeling...</h1>
+      <p class="lead">
+        Medium levels of stress.
+      </p>
+      <p class="lead">
+        Not too good, not too bad. Remember that stress to an extent is good for you, as it can boost your
+        motivation!
+      </p>
+      <p class="lead">
+        Would you like to be recommended some exercises to help ease your stress?
+      </p>
+      <br>
+      <br>
+    </div>
+    <a href="activities-recommended-high.html">
+      <button type="submit" class="btn btn-primary">Let's Do It!</button>
+    </a>
+    <br>
+    <br>
+    <a href="main.html">
+      <button type="submit" class="btn btn-primary">I'm not up for it yet</button>
+    </a>
+  </div>
+
+  <!-- <div class="container-fluid bg-light text-dark mt-3">
     <div class="container bg-light p-5">
       <h1 class="display-4">What's your Stress?</h1>
     </div>
@@ -75,7 +107,7 @@
       <button type="submit" class="btn btn-primary">I'm not up for it yet</button>
     </a>
   </div>
-
+ -->
   <!-- our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
 
