--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-expand-lg navbar-dark bg-success sticky-bottom">
+<!-- <footer class="navbar navbar-expand-lg navbar-dark bg-success sticky-bottom">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,6 +18,12 @@
             <img src="images/facebook_739237.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             <img src="images/twitter_733635.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
         </div>
+    </div>
+</footer> -->
+
+<footer class=" py-3 bg-success border-bottom border-body fixed-bottom" data-bs-theme="dark" style="text-align: center;">
+    <div class="container" id="sticky">
+      <span style="color: white">EASIN, 2024 | © Created By BBY29</span>
     </div>
 </footer>
 
