--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
   <div class="container-fluid">
     <img src="/images/956860-200.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
     <div class="navbar-brand">
@@ -25,6 +25,7 @@
       </ul>
       <button onclick="window.location.href='index.html'" class="btn btn-primary btn-lg" type="button"
         style="margin: 0 1vw;">Log Out</button>
+    </div>
     </div>
   </div>
 </nav>
