--- a/stress-checker.html
+++ b/stress-checker.html
@@ -43,13 +43,13 @@
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
-  <div class="container-fluid bg-light text-dark p-5">
-    <div class="container bg-light p-5">
+  <div class="container-fluid bg-light text-dark pt-5">
+    <div class="container bg-light">
       <h1 class="display-4">Stress Checker - <span id="name-goes-here"></span></h1>
     </div>
   </div>
 
-  <div class="container">
+  <div class="container mb-4">
     <div class="row row-cols-1 row-cols-md-1 g-4">
       <h1 class="display-6">How much of a panic are you in?</h1>
       <label for="input1" class="form-label">Example range</label>
