--- a/stress-lowStress.html
+++ b/stress-lowStress.html
@@ -46,7 +46,7 @@
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
-  <div class="container-fluid bg-light text-dark p-5">
+  <div class="container-fluid bg-light text-dark p-5 mt-3">
     <div class="container bg-light p-5">
       <h1 class="display-4">What's your Stress?</h1>
     </div>
