--- a/study-timer.html
+++ b/study-timer.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container">
         <div class="card">
             <div class="card-body">
                 <div class="row">
