removed footer hamburger button.

--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
   <!-- Stuff for body goes here -->
 
   <div class="container-fluid text-white p-5">
-    <div class="container bg-success p-5">
+    <div class="container bg-success p-5 mt-3">
       <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
       <hr>
       <p class="lead">
