addressed sticky footer and added a few lines to help make it sticky on most pages

--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -20,7 +20,7 @@
     </div>
 </footer> -->
 
-<footer class=" py-3 bg-success border-bottom border-body fixed-bottom" data-bs-theme="dark" style="text-align: center;">
+<footer class=" py-3 bg-success border-bottom border-body fixed-bottom" data-bs-theme="dark" style="position: sticky; bottom: 0; text-align: center;">
     <div class="container" id="sticky">
       <span style="color: white">EASIN, 2024 | © Created By BBY29</span>
     </div>
