added graph.js, ok_button.js, and calendar.js comment

--- a/calendar.html
+++ b/calendar.html
@@ -29,7 +29,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <!-- Other libraries go here -->
-  <script src="scripts/piratedJS.js"></script>
+  <script src="scripts/calendar.js"></script>
 
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
