--- a/main.html
+++ b/main.html
@@ -45,8 +45,8 @@
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
-  <div class="container-fluid text-white p-5">
-    <div class="container bg-success p-5 mt-3">
+  <div class="container-fluid text-white p-5 mt-5">
+    <div class="container bg-success p-5">
       <h1 class="display-4">Hello there, <span id="name-goes-here"></span>!</h1>
       <hr>
       <p class="lead">
