--- a/text/footer_before_login.html
+++ b/text/footer_before_login.html
@@ -2,9 +2,10 @@
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
 
         </button>
-        <div class="navbar-collapse collapse show" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <img src="images/instagram_733614.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             <img src="images/facebook_739237.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             <img src="images/twitter_733635.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
@@ -14,6 +15,6 @@
 
 <footer class="fixed-bottom py-3 bg-success border-bottom border-body" data-bs-theme="dark" style="text-align: center;">
     <div class="container" id="sticky">
-      <span style="color: white">EASIN, 2024 | © Created By BBY29</span>
+        <span style="color: white">EASIN, 2024 | © Created By BBY29</span>
     </div>
-  </footer>
+</footer>
